<resources>
    <string name="app_name">Github Users</string>
    <string name="search_hint">Search username</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ok">OK</string>
    <string name="content_unexpected_error">There was a problem with this loading. Please try again later.</string>
    <string name="title_unexpected_error">It\'s not you, it\'s us</string>
    <string name="title_close">Close</string>
    <string name="error_load">You\'e up to date</string>
    <string name="content_loading_data">Loading</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="bio">Bio</string>
    <string name="user_profile">User Profile</string>
</resources>